--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>about me</title> 
+    </head>
+    <body>
+        <h1>adamrx</h1>
+        <p>Welcome to my profile page!</p>
+    </body>
+</html>
