--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>about me</title> 
+        <title>about me</title>
+        <style>
+
+            h1{text-align:center;}
+
+        </style>
     </head>
     <body>
         <h1>adamrx</h1>
