index.html update 4

--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
         <title>about me</title>
         <style>
 
-            h1{text-align:center;}
+            html,body
+            {
+                height: 100%;
+                margin: 0;
+            }            
+
+            body
+            {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            h1
+            {
+                width: auto;
+            }
+
+            img
+            {
+                width: 20%;
+            }
 
         </style>
     </head>
     <body>
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"/>
         <h1>adamrx</h1>
+        <p>Welcome to my page!</p>
     </body>
 </html>
