--- a/index.html
+++ b/index.html
@@ -5,29 +5,21 @@
         <title>about me</title>
         <style>
 
-            html,body
-            {
-                height: 100%;
-                margin: 0;
-            }            
-
             body
             {
+                margin: 0;
+                height: 100vh;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
                 font-family: Arial, Helvetica, sans-serif;
-            }
-
-            h1
-            {
-                width: auto;
+                font-size: min(4vw, 24px);
             }
 
             img
             {
-                width: 20%;
+                width: min(40vw, 400px);
             }
 
         </style>
