index.html release-candidate1

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>about me</title>
+        <title>About</title>
         <style>
 
             body
@@ -14,18 +14,18 @@
                 justify-content: center;
                 flex-direction: column;
                 font-family: Arial, Helvetica, sans-serif;
-                font-size: min(4vw, 24px);
+                font-size: clamp(16px, 4vh, 24px);
             }
 
             img
             {
-                width: min(40vw, 400px);
+                height: clamp(200px, 40vh, 400px);
             }
 
         </style>
     </head>
     <body>
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"/>
+        <a href="https://github.com"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"/></a>
         <h1>adamrx</h1>
         <p>Welcome to my page!</p>
     </body>
