--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                 justify-content: center;
                 flex-direction: column;
                 font-family: Arial, Helvetica, sans-serif;
-                font-size: clamp(16px, 4vh, 24px);
+                font-size: clamp(1rem, 2.5vh, 2rem);
             }
 
             img
             {
-                height: clamp(200px, 40vh, 400px);
+                height: clamp(10rem, 40vh, 20rem);
             }
 
         </style>
