--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                 justify-content: center;
                 flex-direction: column;
                 font-family: Arial, Helvetica, sans-serif;
-                font-size: clamp(1rem, 2.5vh, 2rem);
+                font-size: clamp(0.5cm, 2.5vh, 2.5cm);
             }
 
             img
             {
-                height: clamp(10rem, 40vh, 20rem);
+                height: clamp(5cm, 40vh, 9cm);
             }
 
         </style>
